# phoneosint

./: README.md  pyproject.toml  requirements.txt
config/: example.env
phoneosint/: __init__.py  __main__.py  core.py  dorker.py  scanners.py  utils.py
scripts/: install.sh
